[workspace]
resolver = "3"
members = ["gitypes", "tokextract"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["flippette <me@flippo.cc>"]

[workspace.dependencies]
color-eyre = "0.6"
dotenvy = "0.15"
eyre = "0.6"
gitypes.path = "gitypes"
serde_json = "1"
thiserror = "2"
tokextract.path = "tokextract"
tracing = "0.1"

[workspace.dependencies.fantoccini]
version = "0.21"
default-features = false

[workspace.dependencies.hyper-util]
version = "0.1"
features = ["client-legacy"]

[workspace.dependencies.reqwest]
version = "0.12"
default-features = false
features = ["charset", "gzip", "json", "http2", "rustls-tls"]

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1"
features = ["macros", "rt", "time"]

[workspace.dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "registry"]
