[package]
name = "giextract"
version = "0.1.0"
edition = "2021"
authors = ["flippette <me@flippo.cc>"]

[dependencies]
color-eyre = "0.6"
dotenvy = "0.15"
eyre = "0.6"
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[dependencies.fantoccini]
version = "0.21"
default-features = false

[dependencies.hyper-util]
version = "0.1"
features = ["client-legacy"]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["brotli", "charset", "gzip", "http2", "json", "rustls-tls"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["macros", "rt", "time"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]
