[package]
name = "gitypes"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "GEL IELTS API types."

[dependencies]
serde.workspace = true

[dev-dependencies]
dotenvy.workspace = true
reqwest.workspace = true
tokextract.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
