[package]
name = "tokextract"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "GEL IELTS API token extraction."

[dependencies]
color-eyre.workspace = true
dotenvy.workspace = true
eyre.workspace = true
fantoccini.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
